Fix overflow of scrolling to the right

--- a/src/Components/MedicalBoards/CutBoard.css
+++ b/src/Components/MedicalBoards/CutBoard.css
@@ -1,5 +1,6 @@
 .game-board-container {
     position: relative;
+    overflow-x: hidden;
 }
 
 /* 23 -> 16*/
